@@ -6,6 +6,7 @@
   * Jpeg images no longer have pixels per inch as a default value for density
     units when the density is not set (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27589).
+  * Added support for setting the font color with -fill to the pango coder.
 
 2015-05-03  6.9.1-3 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed bug with "-define png:format=x" in png.c, introduced in version
